--- a/src/app/layouts/navigation/navigation.component.html
+++ b/src/app/layouts/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-light bg-light">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <a class="navbar-brand" href="/">KBM</a>
   <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
       aria-expanded="false" aria-label="Toggle navigation">
@@ -6,24 +6,23 @@
   </button>
   <div class="collapse navbar-collapse" id="collapsibleNavId">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      <li class="nav-item dropdown active">
+      <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Posts</a>
         <div class="dropdown-menu" aria-labelledby="dropdownId">
-          <a class="dropdown-item active" href="/posts/voted">Voted</a>
-          <a class="dropdown-item" href="/posts/unvoted">Unvoted</a>
-          <a class="dropdown-item" href="/posts/invald-link">Invalid Link</a>
-          <a class="dropdown-item" href="/posts/low-reputation">Low Reputation</a>
-          <a class="dropdown-item" href="/posts/old">Old</a>
-          <a class="dropdown-item" href="/posts/blocked">Blocked</a>
+          <a class="dropdown-item" routerLink="/posts/voted" routerLinkActive="active">Voted</a>
+          <a class="dropdown-item" routerLink="/posts/unvoted" routerLinkActive="active">Unvoted</a>
+          <a class="dropdown-item" routerLink="/posts/invalid-link" routerLinkActive="active">Invalid Link</a>
+          <a class="dropdown-item" routerLink="/posts/low-reputation" routerLinkActive="active">Low Reputation</a>
+          <a class="dropdown-item" routerLink="/posts/old-post" routerLinkActive="active">Old Post</a>
+          <a class="dropdown-item" routerLink="/posts/errored" routerLinkActive="active">Errored</a>
+          <a class="dropdown-item" routerLink="/posts/blocked" routerLinkActive="active">Blocked</a>
         </div>
       </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">History</a>
-        <div class="dropdown-menu" aria-labelledby="dropdownId">
-          <a class="dropdown-item" href="/history/voted">Voted</a>
-          <a class="dropdown-item" href="/history/commented">Commented</a>
-        </div>
-      </li>
+      <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="/voting-history">Voting History</a></li>
     </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="text" name="search_value" placeholder="Search" [(ngModel)]="search_value">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="button" (click)="search()">Search</button>
+    </form>
   </div>
 </nav>
