--- a/src/app/pages/histories/histories.component.html
+++ b/src/app/pages/histories/histories.component.html
@@ -1,3 +1,24 @@
-<p>
-  histories works!
-</p>
+<div class="table-responsive">
+  <table class="table table-hover table-striped table-dark">
+    <thead>
+      <tr>
+        <th>Item ID</th>
+        <th>Voter</th>
+        <th>Weight(%)</th>
+        <th>Commented</th>
+        <th>Voted</th>
+        <th>Latest At</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of histories">
+        <td>{{ item.item_id }}</td>
+        <td>{{ item.voter }}</td>
+        <td class="text-{{ weight_percentage(item.weight) >= 80 ? 'success' : 'danger' }}">{{ weight_percentage(item.weight) }}%</td>
+        <td class="text-{{ item.commented == 1 ? 'success' : 'info' }}">{{ item.commented == 1 ? 'Yes' : 'No' }}</td>
+        <td class="text-{{ item.commented == 1 ? 'success' : 'warning' }}">{{ item.status == 1 ? 'Yes' : 'No' }}</td>
+        <td>{{ item.updated_at | date:'short' }}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
