--- a/src/app/pages/posts/posts.component.html
+++ b/src/app/pages/posts/posts.component.html
@@ -8,6 +8,7 @@
         <th>Status</th>
         <th>Added At</th>
         <th>Updated At</th>
+        <th>Option</th>
       </tr>
     </thead>
     <tbody>
@@ -20,7 +21,7 @@
             <a href="https://steemit.com/@{{ item.author }}" target="_{{ item.id }}">{{ item.author }}</a>
           </td>
           <td class="link">
-            <a href="{{ item.link }}" target="#{{ item.id }}">{{ str_limit(item.link) }}</a>
+            <a href="{{ item.link }}" target="#{{ item.id }}">{{ str_limit(permalink(item.link)) }}</a>
           </td>
           <td>{{ item.task_id }}</td>
           <td>
@@ -28,6 +29,9 @@
           </td>
           <td>{{ item.created_at | date:'short' }}</td>
           <td>{{ item.updated_at | date:'short' }}</td>
+          <td>
+            <button type="button" class="btn btn-info btn-outline-info my-2 my-sm-0 btn-sm" (click)="detail(item.id)">Detail</button>
+          </td>
         </tr>
       </ng-template>
     </tbody>
