--- a/src/app/pages/searches/searches.component.html
+++ b/src/app/pages/searches/searches.component.html
@@ -13,7 +13,7 @@
     </thead>
     <tbody>
       <tr *ngIf="results === null;else hasposts">
-        <td colspan="6">No Result for '{{ search_value }}'</td>
+        <td colspan="7" align="center">No Result for '{{ search_value }}'</td>
       </tr>
       <ng-template #hasposts>
         <tr *ngFor="let item of results">
@@ -21,7 +21,8 @@
             <a href="https://steemit.com/@{{ item.author }}" target="_{{ item.id }}">{{ item.author }}</a>
           </td>
           <td class="link">
-            <a href="{{ item.link }}" target="#{{ item.id }}">{{ str_limit(item.link) }}</a>
+            <a href="{{ item.link }}" target="#{{ item.id }}">{{ str_limit(permalink(item.link)) }}</a>
+
           </td>
           <td>{{ item.task_id }}</td>
           <td>
