--- a/src/app/pages/searches/searches.component.html
+++ b/src/app/pages/searches/searches.component.html
@@ -43,12 +43,12 @@
   <table class="table table-hover table-striped table-dark">
     <thead>
       <tr>
-        <th>Item ID</th>
         <th>Voter</th>
         <th>Weight(%)</th>
         <th>Commented</th>
         <th>Voted</th>
         <th>Latest At</th>
+        <th>Option</th>
       </tr>
     </thead>
     <tbody>
@@ -57,12 +57,16 @@
       </tr>
       <ng-template #hashistories>
         <tr *ngFor="let item of results">
-          <td>{{ item.item_id }}</td>
-          <td>{{ item.voter }}</td>
+          <td class="voter">
+            <a href="https://steemit.com/@{{ item.voter }}" target="_{{ item.id }}">{{ item.voter }}</a>
+          </td>
           <td class="text-{{ weight_percentage(item.weight) >= 80 ? 'success' : 'danger' }}">{{ weight_percentage(item.weight) }}%</td>
           <td class="text-{{ item.commented == 1 ? 'success' : 'info' }}">{{ item.commented == 1 ? 'Yes' : 'No' }}</td>
           <td class="text-{{ item.status == 1 ? 'success' : 'warning' }}">{{ item.status == 1 ? 'Yes' : 'No' }}</td>
           <td>{{ item.updated_at | date:'short' }}</td>
+          <td>
+            <button type="button" class="btn btn-info btn-outline-info my-2 my-sm-0 btn-sm" (click)="detail(item.item_id)">Post Detail</button>
+          </td>
         </tr>
       </ng-template>
     </tbody>
