--- a/src/app/pages/histories/histories.component.html
+++ b/src/app/pages/histories/histories.component.html
@@ -1,4 +1,5 @@
 <div class="table-responsive">
+  <ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '14px' }"></ngx-loading>
   <table class="table table-hover table-striped table-dark">
     <thead>
       <tr>
