--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,3 +20,10 @@ body {
     color: skyblue !important;
   }
 }
+
+.task-id {
+  a {
+    font-weight: bold !important;
+    color: red !important;
+  }
+}
