--- a/src/app/pages/searches/searches.component.html
+++ b/src/app/pages/searches/searches.component.html
@@ -1,4 +1,5 @@
 <div class="table-responsive" *ngIf="field==='posts'">
+  <ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '14px' }"></ngx-loading>
   <table class="table table-hover table-striped table-dark table-sm" id="postsTable">
     <thead>
       <tr>
@@ -24,7 +25,9 @@
             <a href="{{ item.link }}" target="#{{ item.id }}">{{ str_limit(permalink(item.link)) }}</a>
 
           </td>
-          <td>{{ item.task_id }}</td>
+          <td class="task-id">
+            <a href="{{ task_id(item.task_id) }}" target="_{{ item.id }}">{{ item.task_id }}</a>
+          </td>
           <td>
             <b>{{ c_status(item.status) }}</b>
           </td>
@@ -40,6 +43,7 @@
 </div>
 
 <div class="table-responsive" *ngIf="field!=='posts'">
+  <ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '14px' }"></ngx-loading>
   <table class="table table-hover table-striped table-dark">
     <thead>
       <tr>
