update for manager

--- a/src/app/layouts/navigation/navigation.component.html
+++ b/src/app/layouts/navigation/navigation.component.html
@@ -21,12 +21,12 @@
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink="/voting-history">Voting History</a>
       </li>
-      <li class="nav-item dropdown" routerLinkActive="active">
+      <!-- <li class="nav-item dropdown" routerLinkActive="active">
         <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manager</a>
         <div class="dropdown-menu" aria-labelledby="dropdownId">
           <a class="dropdown-item" routerLink="/manager/voters" routerLinkActive="active">Voters</a>
         </div>
-      </li>
+      </li> -->
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="text" name="search_value" placeholder="Search" [(ngModel)]="search_value" (keyup)="input($event)">
