--- a/src/app/pages/histories/histories.component.html
+++ b/src/app/pages/histories/histories.component.html
@@ -7,7 +7,8 @@
         <th>Weight(%)</th>
         <th>Commented</th>
         <th>Voted</th>
-        <th>Latest At</th>
+        <th>Created At</th>
+        <th>Updated At</th>
         <th>Option</th>
       </tr>
     </thead>
@@ -21,6 +22,7 @@
           <td class="text-{{ weight_percentage(item.weight) >= 80 ? 'success' : 'danger' }}">{{ weight_percentage(item.weight) }}%</td>
           <td class="text-{{ item.commented == 1 ? 'success' : 'info' }}">{{ item.commented == 1 ? 'Yes' : 'No' }}</td>
           <td class="text-{{ item.status == 1 ? 'success' : 'warning' }}">{{ item.status == 1 ? 'Yes' : 'No' }}</td>
+          <td>{{ item.created_at | date:'short' }}</td>
           <td>{{ item.updated_at | date:'short' }}</td>
           <td>
             <button type="button" class="btn btn-info btn-outline-info my-2 my-sm-0 btn-sm" (click)="detail(item.item_id)">Post Detail</button>
