--- a/src/app/manager/voter/voter.component.html
+++ b/src/app/manager/voter/voter.component.html
@@ -1,26 +1,4 @@
-<div class="row full-height justify-content-md-center align-items-center" *ngIf="authenticated==false">
-  <div class="col col-md-4">
-    <div class="card bg-dark text-warning">
-      <div class="card-header text-primary text-center">Login</div>
-      <div class="card-content">
-        <div class="col-md-12">
-          <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" name="username" class="form-control" [(ngModel)]="username" placeholder="Username">
-          </div>
-          <div class="form-group">
-            <label for="username">Password</label>
-            <input type="password" name="password" class="form-control" [(ngModel)]="password" placeholder="Password">
-          </div>
-        </div>
-      </div>
-      <div class="card-footer">
-        <button type="button" class="btn btn-outline-success float-right">Login</button>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="table-responsive-md" *ngIf="authenticated==true">
+<div class="table-responsive-md" *ngIf="authenticated===true">
   <ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '14px' }"></ngx-loading>
   <table class="table table-dark table-sm">
     <thead>
