--- a/src/app/manager/manager/manager.component.html
+++ b/src/app/manager/manager/manager.component.html
@@ -1,4 +1,4 @@
-<div class="row full-height justify-content-md-center align-items-center" *ngIf="authenticated===false">
+<div class="row full-height justify-content-md-center align-items-center">
   <ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '14px' }"></ngx-loading>
   <div class="col col-md-4">
     <div class="card bg-dark text-warning">
