--- a/src/app/pages/histories/histories.component.html
+++ b/src/app/pages/histories/histories.component.html
@@ -18,7 +18,7 @@
       </tr>
       <ng-template #hashistories>
         <tr *ngFor="let item of histories">
-          <td class="voter"><a href="https://steemit.com/@{{ item.voter }}" target="_{{ item.id }}">{{ item.voter }}</a></td>
+          <td class="voter"><a href="{{ author_link(item.voter) }}" target="_{{ item.id }}">{{ item.voter }}</a></td>
           <td class="text-{{ weight_percentage(item.weight) >= 80 ? 'success' : 'danger' }}">{{ weight_percentage(item.weight) }}%</td>
           <td class="text-{{ item.commented == 1 ? 'success' : 'info' }}">{{ item.commented == 1 ? 'Yes' : 'No' }}</td>
           <td class="text-{{ item.status == 1 ? 'success' : 'warning' }}">{{ item.status == 1 ? 'Yes' : 'No' }}</td>
