--- a/src/app/pages/posts/posts.component.html
+++ b/src/app/pages/posts/posts.component.html
@@ -7,6 +7,7 @@
         <th>Link</th>
         <th>Task ID</th>
         <th>Status</th>
+        <th>Counter</th>
         <th>Added At</th>
         <th>Updated At</th>
         <th>Option</th>
@@ -14,7 +15,7 @@
     </thead>
     <tbody>
       <tr *ngIf="posts === null;else hasposts">
-        <td colspan="7" align="center">No Content</td>
+        <td colspan="8" align="center">No Content</td>
       </tr>
       <ng-template #hasposts>
         <tr *ngFor="let item of posts">
@@ -28,6 +29,7 @@
           <td>
             <b>{{ c_status(item.status) }}</b>
           </td>
+          <td><b class="text-success">{{ item.current_votes }}</b>/{{ item.total_voters }}</td>
           <td>{{ item.created_at | date:'short' }}</td>
           <td>{{ item.updated_at | date:'short' }}</td>
           <td>
