--- a/src/app/pages/searches/searches.component.html
+++ b/src/app/pages/searches/searches.component.html
@@ -14,7 +14,7 @@
     </thead>
     <tbody>
       <tr *ngIf="results === null;else hasposts">
-        <td colspan="7" align="center">No Result for '{{ search_value }}'</td>
+        <td colspan="8" align="center">No Result for '{{ search_value }}'</td>
       </tr>
       <ng-template #hasposts>
         <tr *ngFor="let item of results">
@@ -31,6 +31,7 @@
           <td>
             <b>{{ c_status(item.status) }}</b>
           </td>
+          <td><b class="text-success">{{ item.current_votes }}</b>/{{ item.total_voters }}</td>
           <td>{{ item.created_at | date:'short' }}</td>
           <td>{{ item.updated_at | date:'short' }}</td>
           <td>
@@ -57,7 +58,7 @@
     </thead>
     <tbody>
       <tr *ngIf="results === null;else hashistories">
-        <td colspan="6">No Result for '{{ search_value }}'</td>
+        <td colspan="7">No Result for '{{ search_value }}'</td>
       </tr>
       <ng-template #hashistories>
         <tr *ngFor="let item of results">
