--- a/src/app/layouts/navigation/navigation.component.html
+++ b/src/app/layouts/navigation/navigation.component.html
@@ -25,6 +25,7 @@
         <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manager</a>
         <div class="dropdown-menu" aria-labelledby="dropdownId">
           <a class="dropdown-item" routerLink="/manager/voters" routerLinkActive="active">Voters</a>
+          <a class="dropdown-item" routerLink="/manager/config" routerLinkActive="active">Config</a>
           <a class="dropdown-item" (click)="logout()">Logout</a>
         </div>
       </li>
